--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,18 @@
     "manifest_version": 3,
     "description": "An extension to convert a list to comma separated strings enclosed in single quotes.",
     "action": {
-        "default_popup": "./popup/popup.html"
+        "default_popup": "./popup/popup.html",
+        "default_icon": {
+            "16": "./images/extension_logo16.png",
+            "32": "./images/extension_logo32.png",
+            "48": "./images/extension_logo48.png",
+            "128": "./images/extension_logo128.png"
+        }
+    },
+    "icons": {
+        "16": "./images/extension_logo16.png",
+        "32": "./images/extension_logo32.png",
+        "48": "./images/extension_logo48.png",
+        "128": "./images/extension_logo128.png"
     }
 }
