--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "Comma Separated Strings",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "manifest_version": 3,
-    "description": "An extension to convert a list to comma separated strings enclosed in single quotes.",
+    "description": "An extension to convert comma separated strings enclosed in quotes to markdown bullet points.",
     "action": {
         "default_popup": "./popup/popup.html",
         "default_icon": {
